# trading-arena

./: .env.example  .gitignore
cloudflare/: schema.sql
cloudflare/api/: package-lock.json  package.json  wrangler.toml
cloudflare/api/src/: arena-room.ts  index.ts  types.ts
cloudflare/migrations/: 002_add_alpaca_credentials.sql  003_add_social_features.sql  004_add_memories.sql
dashboard/: index.html  package-lock.json  package.json  vercel.json
dashboard/src/: App.tsx  types.ts  utils.ts
dashboard/src/components/: BotCard.tsx  ChatFeed.tsx  Leaderboard.tsx  LiveFeed.tsx  MarketStatus.tsx  PortfolioViewer.tsx  RejectedTrades.tsx
dashboard/src/hooks/: useGameState.ts  (+1 more)
deploy/: cloudflare-setup.md  orchestrator.cron  vps-setup.sh
mcp-server/src/: __init__.py  finnhub_client.py  server.py  trading_client.py
mcp_server/: requirements.txt
mcp_server/src/: alpaca_client.py  server.py  server_http.py  trading_client.py
orchestrator/: pyproject.toml
orchestrator/prompts/: boomer.md  degen.md  diana.md  doomer.md  gary.md  mel.md  quant.md  rei.md  test.md  turtle.md  vince.md
orchestrator/src/: __init__.py  bot_runner.py  config.py  main.py  price_fetcher.py  state.py  trade_executor.py  trade_parser.py  trade_validator.py
orchestrator/src/models/: __init__.py  bot.py  game_state.py  position.py  trade.py
orchestrator/tests/: test_trade_parser.py  test_trade_validator.py
scripts/: init-game.py  reset-game.py  run-round.sh  run-single-bot.py  set-game-status.py  setup-server.sh  start_mcp_servers.sh  stop_mcp_servers.sh  view-state.py
(+16 files in other folders)
